corren todos los tests con turnos